# project_root_finder

./: .gitignore  Pipfile  README.md  pyproject.toml  release.sh
.github/workflows/: publish-to-pypi.yml  test.yml
project_root_finder/: __init__.py
tests/: test_project_root_finder.py
