[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_root_finder"
version = "1.9"
description = "A simple package to get the absolute path of your Python project root"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name="James", email="mail@jamesdavies.me" }
]
keywords = ["project", "root", "path", "utility", "directory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = {Homepage = "https://github.com/jamesmdavies88", Repository = "https://github.com/jamesmdavies88/project_root_finder"}
